--- a/index.html
+++ b/index.html
@@ -692,8 +692,8 @@
 
     <!-- Audio Element - Satu File Musik Backsound -->
     <audio id="backgroundMusic" loop preload="auto">
-        <source src="C:\Users\User\Downloads\romantic-wedding-background-music-357203.mp3" type="audio/mpeg">
-        <source src="C:\Users\User\Downloads\romantic-wedding-background-music-357203.mp3" type="audio/ogg">
+        <source src="music/birthday-background.mp3" type="audio/mpeg">
+        <source src="music/birthday-background.mp3" type="audio/ogg">
         Browser Anda tidak mendukung audio.
     </audio>
 
